--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	
+	// JSP 연동 라이브러리
+//		  	=> 아래 두줄은 구글링으로 복사함 ('spring gradle jsp 연동' 구글링)
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+  	implementation 'javax.servlet:jstl'
+
 }
 
 tasks.named('test') {
